--- a/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
@@ -257,7 +257,7 @@
                 $("#checked_input").val("confirmed");
                 qp += '&checked=' + 'confirmed';
             } else {
-                $("#checked_input").val("unchacked");
+                $("#checked_input").val("unchecked");
                 qp += '&checked=' + 'unchecked';
             }
             return(qp);
